[package]
name = "pi_diff_cam"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
async-stream = "0.3"
image = "0.25"
bytes = "1.5"
bincode = "1.3"
chrono = "0.4.43"
serde = { version = "1.0.228", features = ["derive"] }
lazy_static = "1.5.0"
toml = "0.9.11+spec-1.1.0"
reqwest = { version = "0.13.1", features = ["multipart", "stream"] }
multipart = "0.18.0"
tokio-util = "0.7.18"